[tool.poetry]
name = "midas-mesa"
version = "0.1.0"
description = ""
authors = ["Gabriel Maayan <gabemgem@gmail.com>"]
readme = "README.md"
packages = [{include = "midas_mesa"}]

[tool.poetry.dependencies]
python = "^3.11"
mesa = "^2.1.4"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
